--- a/templates/base.html
+++ b/templates/base.html
@@ -5,22 +5,26 @@
     {% block head %}
 
         <title>Library</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+              integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+              crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
               crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/1edd52e45b.js" crossorigin="anonymous"></script>
     {% endblock %}
 </head>
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Django Library</a>
+        <a class="navbar-brand mx-2" href="/">Django Library</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item mx-2">
                     <div class="dropdown">
                         <button class=" nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -32,7 +36,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <div class="dropdown">
                         <button class=" nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
                                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -44,9 +48,9 @@
                         </ul>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <div class="dropdown">
-                        <button class=" nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
+                        <button class="nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                             Orders
                         </button>
@@ -54,6 +58,22 @@
                             <li><a class="dropdown-item" href="{% url 'order_list' %}">List of orders</a></li>
                             <li><a class="dropdown-item" href="{% url 'order_create' %}">Add new order</a></li>
                         </ul>
+                    </div>
+                </li>
+            </ul>
+            <ul class="nav justify-content-end mx-3">
+                <li class="nav-item mx-2">
+                    <div>
+                        <button class="btn btn-outline-light" type="button" aria-expanded="false">
+                            Sign in
+                        </button>
+                    </div>
+                </li>
+                <li class="nav-item mx-3">
+                    <div>
+                        <button class="btn btn-outline-light" type="button" aria-expanded="false">
+                            Sign up
+                        </button>
                     </div>
                 </li>
             </ul>
@@ -66,7 +86,57 @@
     {% block content %}
     {% endblock %}
 </div>
+<div>
+    <footer class="text-center text-white fixed-bottom" style="background-color: rgba(0, 0, 0, 0.3);">
+        <div class="container p-2 pb-0">
+            <section class="mb-2">
 
+                <!-- Gmail -->
+                <a
+                        class="btn btn-secondary btn-floating m-1"
+                        style="background-color: #dd4b39;"
+                        href="mailto:asineckijegor@gmail.com"
+                        role="button"
+                        target="_blank">
+                    <i class="fa-solid fa-inbox"></i>
+                </a>
+
+                <!-- Telegram -->
+                <a
+                        class="btn btn-secondary btn-floating m-1"
+                        style="background-color: #38a6db;"
+                        href="https://t.me/import_error"
+                        role="button"
+                        target="_blank">
+                    <i class="fa-solid fa-paper-plane"></i></i>
+                </a>
+
+                <!-- Linkedin -->
+                <a
+                        class="btn btn-secondary btn-floating m-1"
+                        style="background-color: #0E67A8;"
+                        href="https://www.linkedin.com/in/yasegor/"
+                        role="button"
+                        target="_blank"
+                ><i class="fab fa-linkedin-in"></i
+                ></a>
+                <!-- Github -->
+                <a
+                        class="btn btn-secondary btn-floating m-1"
+                        style="background-color: #333333;"
+                        href="https://github.com/yasegor"
+                        role="button"
+                        target="_blank"
+                ><i class="fab fa-github"></i
+                ></a>
+            </section>
+        </div>
+
+        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.3);">
+            © Django Library by <!-- Yehor Yasinetskyi -->
+        </div>
+    </footer>
+</div>
 </body>
 
 </html>
