Made font for "View" and Update buttons from italic to common.

--- a/templates/author/author_list.html
+++ b/templates/author/author_list.html
@@ -21,9 +21,9 @@
                     <td>{{ author.patronymic }}</td>
                     <td>
                         <a type="button" class="btn btn-primary mx-2 my-2"
-                           href="/authors/{{ author.id }}"><i>View</i></a>
+                           href="/authors/{{ author.id }}">View</a>
                         <a type="button" class="btn btn-warning"
-                           href="/authors/update/{{ author.id }}"><i>Update</i></a>
+                           href="/authors/update/{{ author.id }}">Update</a>
                     </td>
                 </tr>
                 </tbody>
