--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand mx-2" href="/">Django Library</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <div class="navbar-nav" id="navbarSupportedContent">
+            <ul class="navbar-nav justify-content-center mb-2 mb-md-0"> <!-- Тут надо центрировать!!!-->
                 <li class="nav-item mx-2">
                     <div class="dropdown">
                         <button class=" nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
