--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -28,8 +28,8 @@
                     <td>{{ book.description }}</td>
                     <td>{{ book.count }}</td>
                     <td>
-                        <a type="button" class="btn btn-primary mx-2 my-2" href="/books/{{ book.id }}"><i>View</i></a>
-                        <a type="button" class="btn btn-warning" href="/books/update/{{ book.id }}"><i>Update</i></a>
+                        <a type="button" class="btn btn-primary mx-2 my-2" href="/books/{{ book.id }}">View</a>
+                        <a type="button" class="btn btn-warning" href="/books/update/{{ book.id }}">Update</a>
                     </td>
                 </tr>
                 </tbody>
