--- a/templates/order/order_list.html
+++ b/templates/order/order_list.html
@@ -20,7 +20,7 @@
                 <th scope="col">Plated end at:</th>
 
 
-                <th scope="col">Actions <a type="button" class="btn btn-success" href="create/"><i>Create</i></a>
+                <th scope="col">Actions <a type="button" class="btn btn-success" href="create/">Create</a>
                 </th>
             </tr>
             </thead>
@@ -35,8 +35,9 @@
 
 
                     <td>
-                        <a type="button" class="btn btn-primary mx-2 my-2" href="{% url 'order_detail' order.id %}"><i>View</i></a>
-                        <a type="button" class="btn btn-warning" href="{% url 'order_update' order.id %}"><i>Update</i></a>
+                        <a type="button" class="btn btn-primary mx-2 my-2"
+                           href="{% url 'order_detail' order.id %}">View</a>
+                        <a type="button" class="btn btn-warning" href="{% url 'order_update' order.id %}">Update</a>
 
                     </td>
                 </tr>
