--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     {% block head %}
-
         <title>Library</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-              integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-              crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
               crossorigin="anonymous">
@@ -15,85 +10,127 @@
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/1edd52e45b.js" crossorigin="anonymous"></script>
+        <style>
+            /*============ Reset styles =============*/
+            * {
+                margin: 0;
+            }
+
+            html, body {
+                height: 100%;
+            }
+
+            /*============ Main styles =============*/
+            body {
+                background: #ffffff;
+                color: #222222;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+            .content {
+                box-sizing: border-box;
+                padding: 20px;
+                width: 100%;
+            }
+
+            .content p {
+                margin: 10px 0;
+                font-size: 16px;
+                line-height: 1.8;
+            }
+
+            body {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .content {
+                flex-grow: 1;
+            }
+        </style>
     {% endblock %}
 </head>
-
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand mx-2" href="/">Django Library</a>
-        <div class="navbar-nav" id="navbarSupportedContent">
-            <ul class="navbar-nav justify-content-center mb-2 mb-md-0"> <!-- Тут надо центрировать!!!-->
-                <li class="nav-item mx-2">
-                    <div class="dropdown">
-                        <button class=" nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                            Books
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="/books/">List of books</a></li>
-                            <li><a class="dropdown-item" href="/books/create/">Add new book</a></li>
-                        </ul>
-                    </div>
+    <div class="container-fluid mx-3">
+        <a class="navbar-brand" href="/">Django Library</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse mx-3" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Authors
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/authors/">List of authors</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="/authors/create/">Add new author</a></li>
+                    </ul>
                 </li>
-                <li class="nav-item mx-2">
-                    <div class="dropdown">
-                        <button class=" nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                            Authors
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="/authors/">List of authors</a></li>
-                            <li><a class="dropdown-item" href="/authors/create/">Add new author</a></li>
-                        </ul>
-                    </div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Books
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/books/">List of books</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="/books/create/">Add new book</a></li>
+                    </ul>
                 </li>
-                <li class="nav-item mx-2">
-                    <div class="dropdown">
-                        <button class="nav-link active btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                            Orders
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="{% url 'order_list' %}">List of orders</a></li>
-                            <li><a class="dropdown-item" href="{% url 'order_create' %}">Add new order</a></li>
-                        </ul>
-                    </div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Orders
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/orders/">List of orders</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="/orders/create/">Add new order</a></li>
+                    </ul>
                 </li>
             </ul>
-            <ul class="nav justify-content-end mx-3">
+            <ul class="nav justify-content-end">
                 <li class="nav-item mx-2">
                     <div>
                         <button class="btn btn-outline-light" type="button" aria-expanded="false">
-                            Sign in
+                            Sign-in
                         </button>
                     </div>
                 </li>
                 <li class="nav-item mx-3">
                     <div>
                         <button class="btn btn-outline-light" type="button" aria-expanded="false">
-                            Sign up
+                            Sign-up
                         </button>
                     </div>
                 </li>
             </ul>
-
         </div>
     </div>
 </nav>
-<br>
-<div class="container">
+<div class="content container">
     {% block content %}
     {% endblock %}
 </div>
 <div>
-    <footer class="text-center text-white fixed-bottom" style="background-color: rgba(0, 0, 0, 0.3);">
+    <footer class="text-center text-white" style="background-color: rgba(0, 0, 0, 0.2);">
         <div class="container p-2 pb-0">
             <section class="mb-2">
 
                 <!-- Gmail -->
                 <a
-                        class="btn btn-secondary btn-floating m-1"
+                        class="btn btn-secondary btn-floating mx-3 my-2"
                         style="background-color: #dd4b39;"
                         href="mailto:asineckijegor@gmail.com"
                         role="button"
@@ -103,17 +140,17 @@
 
                 <!-- Telegram -->
                 <a
-                        class="btn btn-secondary btn-floating m-1"
+                        class="btn btn-secondary btn-floating mx-3 my-2"
                         style="background-color: #38a6db;"
                         href="https://t.me/import_error"
                         role="button"
                         target="_blank">
-                    <i class="fa-solid fa-paper-plane"></i></i>
+                    <i class="fa-solid fa-paper-plane"></i>
                 </a>
 
                 <!-- Linkedin -->
                 <a
-                        class="btn btn-secondary btn-floating m-1"
+                        class="btn btn-secondary btn-floating mx-3 my-2"
                         style="background-color: #0E67A8;"
                         href="https://www.linkedin.com/in/yasegor/"
                         role="button"
@@ -122,7 +159,7 @@
                 ></a>
                 <!-- Github -->
                 <a
-                        class="btn btn-secondary btn-floating m-1"
+                        class="btn btn-secondary btn-floating mx-3 my-2"
                         style="background-color: #333333;"
                         href="https://github.com/yasegor"
                         role="button"
@@ -132,11 +169,10 @@
             </section>
         </div>
 
-        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.3);">
-            © Django Library by <!-- Yehor Yasinetskyi -->
+        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+            © Django Library by Yehor Yasinetskyi
         </div>
     </footer>
 </div>
 </body>
-
 </html>
