--- a/templates/base.html
+++ b/templates/base.html
@@ -133,8 +133,7 @@
                         class="btn btn-secondary btn-floating mx-3 my-2"
                         style="background-color: #dd4b39;"
                         href="mailto:asineckijegor@gmail.com"
-                        role="button"
-                        target="_blank">
+                        role="button">
                     <i class="fa-solid fa-inbox"></i>
                 </a>
 
