Register system and page created. Need to fix field selection Username.

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     {% block head %}
-        <title>Library</title>
+        <title>{{ title }}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
               crossorigin="anonymous">
@@ -11,7 +11,6 @@
                 crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/1edd52e45b.js" crossorigin="anonymous"></script>
         <style>
-            /*============ Reset styles =============*/
             * {
                 margin: 0;
             }
@@ -20,7 +19,6 @@
                 height: 100%;
             }
 
-            /*============ Main styles =============*/
             body {
                 background: #ffffff;
                 color: #222222;
@@ -100,29 +98,45 @@
                     </ul>
                 </li>
             </ul>
-            <ul class="nav justify-content-end">
-                <li class="nav-item mx-2">
-                    <div>
-                        <button class="btn btn-outline-light" type="button" aria-expanded="false">
-                            Sign-in
-                        </button>
-                    </div>
-                </li>
-                <li class="nav-item mx-3">
-                    <div>
-                        <button class="btn btn-outline-light" type="button" aria-expanded="false">
-                            Sign-up
-                        </button>
-                    </div>
-                </li>
-            </ul>
+
+            {% if not user.is_authenticated %}
+                <ul class="nav justify-content-end">
+                    <li class="nav-item mx-2">
+                        <div>
+                            <button class="btn btn-outline-light" type="button" aria-expanded="false">
+                                Sign in
+                            </button>
+                        </div>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <div>
+                            <button class="btn btn-outline-light" onclick="location.href='/user/register/'"
+                                    aria-expanded="false">
+                                Sign up
+                            </button>
+                        </div>
+                    </li>
+                </ul>
+
+            {% else %}
+                <button class="btn btn-outline-light" onclick="location.href='/'" aria-expanded="false">
+                    Logout
+                </button>
+            {% endif %}
+
         </div>
     </div>
 </nav>
 <div class="content container">
     {% block content %}
+        {% if user.is_authenticated %}
+            <h3>Hello, {{ user.first_name }} {{ user.last_name }}!</h3>
+        {% else %}
+            Hello, Guest!
+        {% endif %}
     {% endblock %}
 </div>
+
 <div>
     <footer class="text-center text-white" style="background-color: rgba(0, 0, 0, 0.2);">
         <div class="container p-2 pb-0">
@@ -168,7 +182,7 @@
             </section>
         </div>
 
-        <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-2" style="background-color: rgba(0,0,0,0.2); color: #4b4747">
             © Django Library by Yehor Yasinetskyi
         </div>
     </footer>
