--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -17,8 +17,8 @@
                 <th scope="col">Name</th>
                 <th scope="col">description</th>
                 <th scope="col">count</th>
-                <th scope="col">Actions <a type="button" class="btn btn-success mx-0" href="create/"><i>Add
-                    new</i></a></th>
+                <th scope="col">Actions <a type="button" class="btn btn-success mx-0" href="create/">Add
+                    new</a></th>
             </tr>
             </thead>
             {% for book in books %}
