--- a/templates/auth/user_register.html
+++ b/templates/auth/user_register.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 
 {% block content %}
@@ -6,10 +7,18 @@
         .asteriskField {
             display: none;
         }
+
+        p {
+            position: absolute;
+            top: 75%;
+            left: 39%;
+        }
+
     </style>
     <div class="container py-3">
-        <h3>Registration in library 📚</h3>
+        <h3>Sign up in library 📚</h3>
         <br>
         {% crispy form %}
     </div>
+    <p>If you already have an account, <a href={% url 'login' %}>login</a> instead.</p>
 {% endblock %}
