--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,8 @@
                 <ul class="nav justify-content-end">
                     <li class="nav-item mx-2">
                         <div>
-                            <button class="btn btn-outline-light" type="button" aria-expanded="false">
+                            <button class="btn btn-outline-light" onclick="location.href='/user/login/'"
+                                    aria-expanded="false">
                                 Sign in
                             </button>
                         </div>
@@ -119,7 +120,7 @@
                 </ul>
 
             {% else %}
-                <button class="btn btn-outline-light" onclick="location.href='/'" aria-expanded="false">
+                <button class="btn btn-outline-light" onclick="location.href='/user/logout/'" aria-expanded="false">
                     Logout
                 </button>
             {% endif %}
@@ -132,7 +133,7 @@
         {% if user.is_authenticated %}
             <h3>Hello, {{ user.first_name }} {{ user.last_name }}!</h3>
         {% else %}
-            Hello, Guest!
+            <h3>Hello, Guest!</h3>
         {% endif %}
     {% endblock %}
 </div>
