--- a/templates/author/author_detail.html
+++ b/templates/author/author_detail.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
-{% block head %}
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+{% block content %}
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -110,13 +108,12 @@
             margin: 100px auto;
         }
     </style>
-{% endblock head %}
-
-{% block content %}
-    <h4>Author name: {{ author.name }}</h4>
+    <div class="my-5">
+        <h4>Author name: {{ author.name }}</h4>
     <h4>Author surname: {{ author.surname }}</h4>
     <h4>Author surname: {{ author.patronymic }}</h4>
     <h4>Books: {{ books|join:'; ' }}</h4>
+    </div>
 
     <a href="/authors/update/{{ author.id }}" class="btn btn-primary">Update</a>
     <a href="/authors/" class="btn btn-success">Back to list</a>
