--- a/templates/order/order_create.html
+++ b/templates/order/order_create.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 {% block content %}
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Add</button>
+        {% crispy form %}
     </form>
 {% endblock %}
