--- a/templates/order/order_list.html
+++ b/templates/order/order_list.html
@@ -19,8 +19,7 @@
                 <th scope="col">End at:</th>
                 <th scope="col">Plated end at:</th>
 
-
-                <th scope="col">Actions <a type="button" class="btn btn-success" href="create/">Create</a>
+                <th scope="col"><a type="button" class="btn btn-success" href="create/">Create</a>
                 </th>
             </tr>
             </thead>
