--- a/templates/author/author_list.html
+++ b/templates/author/author_list.html
@@ -1,15 +1,15 @@
-{% extends '../base.html' %}
+{% extends 'base.html' %}
 
 
 {% block content %}
-    <div class="col-12">
+    <div class="col-12 container py-3">
         <table class="table table-sm table-hover">
             <thead>
             <tr>
                 <th scope="col">Name</th>
                 <th scope="col">surname</th>
                 <th scope="col">patronymic</th>
-                <th scope="col">Actions <a type="button" class="btn btn-success mx-5" href="create/">Add
+                <th scope="col"><a type="button" class="btn btn-success mx-5" href="create/">Add
                     new</a></th>
             </tr>
             </thead>
