--- a/templates/order/order_list.html
+++ b/templates/order/order_list.html
@@ -1,13 +1,4 @@
-{% extends '../base.html' %}
-
-{% block title %}
-    Orders | {{ block.super }}
-{% endblock %}
-
-
-{% block content_title %}
-    List of Orders
-{% endblock %}
+{% extends 'base.html' %}
 
 {% block content %}
     <div class="col-12">
