--- a/templates/auth/user_register.html
+++ b/templates/auth/user_register.html
@@ -14,6 +14,10 @@
             left: 39%;
         }
 
+        .captcha {
+            padding: 4%;
+        }
+
     </style>
     <div class="container py-3">
         <h3>Sign up in library 📚</h3>
