Implemented pagination for all pages

--- a/templates/author/author_list.html
+++ b/templates/author/author_list.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <div class="col-12 container py-3">
+    <div class="col-12">
         <table class="table table-sm table-hover">
             <thead>
             <tr>
@@ -10,12 +10,12 @@
                 <th scope="col">surname</th>
                 <th scope="col">patronymic
                     {% if perms.author.add_author %}
-                        <th scope="col"><a type="button" class="btn btn-success mx-5" href="create/">Add
+                        <th scope="col"><a type="button" class="btn btn-success mx-2 col-md-4" href="create/">Add
                             new</a></th>
                     {% endif %}
             </tr>
             </thead>
-            {% for author in authors %}
+            {% for author in page_obj %}
                 <tbody>
                 <tr>
                     <td>{{ author.name }}</td>
@@ -25,8 +25,8 @@
                         <a type="button" class="btn btn-primary mx-2 my-2"
                            href="/authors/{{ author.id }}">View</a>
                         {% if perms.author.change_author %}
-                        <a type="button" class="btn btn-warning"
-                           href="/authors/update/{{ author.id }}">Update</a>
+                            <a type="button" class="btn btn-warning"
+                               href="/authors/update/{{ author.id }}">Update</a>
                         {% endif %}
                     </td>
                 </tr>
@@ -34,5 +34,40 @@
             {% endfor %}
         </table>
     </div>
+
+    <nav>
+        <ul class="pagination justify-content-center">
+            <li class="{% if page_obj.has_previous %}page-item{% else %}page-item disabled{% endif %}">
+                <a class="page-link"
+                   href="?page={% if page_obj.has_previous %}{{ page_obj.previous_page_number }}{% else %}''{% endif %}"
+                   aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+
+            {% for page_num in page_range|default_if_none:page_obj.paginator.get_elided_page_range %}
+                {% if page_obj.number == page_num %}
+                    <li class="active page-item"><span class="page-link">{{ page_num }}</span>
+                    </li>
+                {% else %}
+                    {% if page_num == page_obj.paginator.ELLIPSIS %}
+                        <li class="page-item"><span class="page-link">{{ page_num }}</span></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a></li>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+
+
+            <li class="{% if page_obj.has_next %}page-item{% else %}page-item disabled{% endif %}">
+                <a class="page-link"
+                   href="?page={% if page_obj.has_next %}{{ page_obj.next_page_number }}{% else %}''{% endif %}"
+                   aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 {% endblock %}
 
