--- a/templates/order/order_user_list.html
+++ b/templates/order/order_user_list.html
@@ -13,7 +13,7 @@
                 </th>
             </tr>
             </thead>
-            {% for order in orders %}
+            {% for order in page_obj %}
                 <tbody>
                 <tr>
                     <td>
@@ -33,4 +33,39 @@
             {% endfor %}
         </table>
     </div>
+
+    <nav>
+        <ul class="pagination justify-content-center">
+            <li class="{% if page_obj.has_previous %}page-item{% else %}page-item disabled{% endif %}">
+                <a class="page-link"
+                   href="?page={% if page_obj.has_previous %}{{ page_obj.previous_page_number }}{% else %}''{% endif %}"
+                   aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+
+            {% for page_num in page_range|default_if_none:page_obj.paginator.get_elided_page_range %}
+                {% if page_obj.number == page_num %}
+                    <li class="active page-item"><span class="page-link">{{ page_num }}</span>
+                    </li>
+                {% else %}
+                    {% if page_num == page_obj.paginator.ELLIPSIS %}
+                        <li class="page-item"><span class="page-link">{{ page_num }}</span></li>
+                    {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a></li>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+
+
+            <li class="{% if page_obj.has_next %}page-item{% else %}page-item disabled{% endif %}">
+                <a class="page-link"
+                   href="?page={% if page_obj.has_next %}{{ page_obj.next_page_number }}{% else %}''{% endif %}"
+                   aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 {% endblock %}
